Fixed auto-rotation of team tiles on mobile

--- a/assets/css/style-dark.css
+++ b/assets/css/style-dark.css
@@ -8789,7 +8789,7 @@
       .block-2 .author .position {
         display: block;
         font-size: 12px; }
-    @media (max-width: 991.98px) {
+    /* @media (max-width: 991.98px) {
       .block-2 .back {
         -webkit-transform: rotateY(0deg);
         -moz-transform: rotateY(0deg);
@@ -8800,7 +8800,7 @@
         -webkit-transform: rotateY(180deg);
         -moz-transform: rotateY(180deg);
         -o-transform: rotateY(180deg);
-        transform: rotateY(180deg); } }
+        transform: rotateY(180deg); } } */
   
   .block-20 {
     overflow: hidden;
